<resources>
    <string name="app_name">MarketStructure</string>
    <string name="registeration">Registeration</string>
    <string name="listing_id_title">Listing id:</string>
    <string name="condition_title">Condition:</string>
    <string name="isbn_title"><b>ISBN:</b></string>
    <string name="textbook_name_title">Title:</string>
    <string name="authors_title">Author(s):</string>
    <string name="edition_title">Edition:</string>
    <string name="additional_details_title">Additional Details:</string>
    <string name="seller_title">Seller:</string>
    <string name="price_title">Price:</string>
    <string name="topic_code_title">Topic Code:</string>
    <string name="year_published_title">Year Published:</string>
    <string name="message_seller_button_title">Message Seller</string>
    <string name="textbook_image">Textbook Image</string>
    <string name="listing_id_display">Id</string>
    <string name="condition_display">Condition</string>
    <string name="isbn_display">ISBN</string>
    <string name="textbook_name_display">Title</string>
    <string name="authors_display">Author(s)</string>
    <string name="edition_display">Edition</string>
    <string name="additional_details_display">Additional Details</string>
    <string name="seller_display">Seller</string>
    <string name="price_display">Price</string>
    <string name="topic_code_display">Code</string>
    <string name="year_published_display">Year</string>
    <string name="listing_status_title">Listing Status:</string>
    <string name="listing_last_updated_display">Date</string>
    <string name="listing_status_display">Status</string>
    <string name="number_of_pages_title">Number of Pages:</string>
    <string name="listing_last_updated_title">Listing Last Updated:</string>
    <string name="number_of_pages_display">Pages</string>
    <string name="topic_title">Topic:</string>
    <string name="topic_display">Topic</string>
    <string name="fraud_warning"><font color='#D51E1E'><b><i>WARNING: Listing/Seller has been identified as Fraudulent. Proceed with Caution!</i></b></font></string>
    <string name="view_sellers_profile_button">View Seller\'s Profile</string>
    <string name="b_buy_now">Buy Now</string>
    <string name="report_listing_button">REPORT LISTING</string>
    <string name="intent_listing_price" />
    <string name="intent_condition" />
    <string name="intent_seller" />
    <string name="intent_listing_status" />
    <string name="b_search">Search</string>
    <string name="tv_delivery_option_standard_price"><b>Flat rate of $10</b></string>
    <string name="tv_delivery_option_express_price"><b>Flat rate of $15</b></string>
    <string name="checkout_menu_description">Please note the following before selecting a payment method: \n\u2022 CASH payments must be paid upfront upon delivery\n\u2022 All CARD payments will incur a 1.5% surcharge \n\n
        Please select payment method: \n
    </string>
    <string name="b_cash_payment">CASH</string>
    <string name="b_card_payment">CARD</string>
    <string name="tv_payment_method_menu_title">PAYMENT METHOD MENU</string>
    <string name="iv_cash_payment_desc">cash_payment</string>
    <string name="iv_book_shopping_cart_desc">book_shopping_cart</string>
    <string name="iv_card_payment_desc">card_payment</string>
    <string name="collect_in_store_description">You have selected to <font color='#D51E1E'><b>COLLECT IN STORE</b></font> and <font color='#D51E1E'><b>PAY IN CASH</b></font>. \n
        Please note the following before confirming: \n
        \u2022" The textbook will be put on <font color='#D51E1E'><b>RESERVE</b></font> and must be collected within <font color='#D51E1E'><b>14</b></font> days\n
        \u2022" Failure to collect the textbook within the timeframe will result in the reservation being <font color='#D51E1E'><b>WITHDRAWN</b></font> \n
        \n
    </string>
    <string name="b_confirm">CONFIRM</string>
    <string name="b_cancel">CANCEL</string>
    <string name="tv_delivery_details_title">DELIVERY DETAILS</string>
    <string name="iv_delivery_package_desc">iv_delivery_package_desc</string>
    <string name="iv_warning_desc">iv_warning_desc</string>
    <string name="b_express_delivery">EXPRESS DELIVERY</string>
    <string name="b_standard_delivery">STANDARD DELIVERY</string>
    <string name="tv_delivery_options_title">DELIVERY OPTIONS</string>
    <string name="iv_collect_in_store_desc">iv_collect_in_store_desc</string>
    <string name="iv_express_delivery_desc">iv_express_delivery_desc</string>
    <string name="iv_standard_delivery_desc">iv_standard_delivery_desc</string>
    <string name="tv_card_payment_checkout">CARD PAYMENT CHECKOUT</string>
    <string name="et_card_expiry_month">mm</string>
    <string name="et_card_expiry_year">yy</string>
    <string name="tv_card_payment_expiry_date_month_year_separator_title">/</string>
    <string name="tv_card_expiry_month">Month</string>
    <string name="tv_card_expiry_year">Year</string>
    <string name="tv_card_payment_cvv_title">CVV:</string>
    <string name="tv_card_payment_expiry_date_title">Expiry Date:</string>
    <string name="tv_card_payment_card_number_title">Card Number:</string>
    <string name="et_card_number_hint">Please enter card number</string>
    <string name="b_proceed_to_payment">Proceed To Payment</string>
    <string name="tv_recipient_name_title"><b>Recipient Name:</b></string>
    <string name="tv_email_address_title"><b>Email Address:</b></string>
    <string name="tv_phone_number_title"><b>Phone Number:</b></string>
    <string name="tv_street_address_title"><b>Street Address:</b></string>
    <string name="et_recipient_name_hint">Please enter recipient name</string>
    <string name="et_email_address_hint">Please enter email address</string>
    <string name="et_phone_number_hint">Please enter phone number</string>
    <string name="et_street_address_hint">Please enter street address</string>
    <string name="tv_textbook_ordered_details_title"><u><b>TEXTBOOK ORDERED DETAILS</b></u></string>
    <string name="tv_order_summary_textbook_price_title"><b>Textbook Price (excl. shipping):</b></string>
    <string name="tv_order_summary_delivery_details_title"><u><b>DELIVERY DETAILS</b></u></string>
    <string name="tv_order_summary_delivery_option_selected_title"><b>Delivery Option Selected:</b></string>
    <string name="tv_order_summary_delivery_option_selected_display">Delivery Option</string>
    <string name="tv_order_summary_recipient_name_title"><b>Recipient Name:</b></string>
    <string name="tv_order_summary_recipient_name_display">Name</string>
    <string name="tv_order_summary_delivery_address_title"><b>Delivery Address:</b></string>
    <string name="tv_order_summary_delivery_address_display">Address</string>
    <string name="tv_order_summary_payment_details_title"><u><b>PAYMENT DETAILS</b></u></string>
    <string name="tv_order_summary_payment_method_selected_title"><b>Payment Method Selected:</b></string>
    <string name="tv_order_summary_payment_method_selected_display">Payment Method</string>
    <string name="tv_order_summary_total_cost_title"><b>Total Cost (incl. shipping):</b></string>
    <string name="tv_order_summary_total_cost_display">Cost</string>
    <string name="b_place_order">PLACE ORDER</string>
    <string name="tv_order_summary_confirmation_title">ORDER SUMMARY CONFIRMATION</string>


</resources>