<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Checkout.DeliveryOptionsMenuActivity">

    <TextView
        android:id="@+id/tv_delivery_options_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_delivery_options_title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.072" />

    <ImageView
        android:id="@+id/iv_standard_delivery"
        android:layout_width="166dp"
        android:layout_height="99dp"
        android:layout_marginTop="9dp"
        android:contentDescription="@string/iv_standard_delivery_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_delivery_option_standard_price"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/standard_delivery" />

    <Button
        android:id="@+id/b_standard_delivery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/b_standard_delivery"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_standard_delivery"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/b_express_delivery"
        android:layout_width="201dp"
        android:layout_height="48dp"
        android:text="@string/b_express_delivery"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_express_delivery"
        app:layout_constraintVertical_bias="0.065" />

    <TextView
        android:id="@+id/tv_delivery_option_standard_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_delivery_option_standard_price"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_delivery_options_title"
        app:layout_constraintVertical_bias="0.081" />

    <TextView
        android:id="@+id/tv_delivery_option_express_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:text="@string/tv_delivery_option_express_price"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_standard_delivery"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/iv_express_delivery"
        android:layout_width="169dp"
        android:layout_height="126dp"
        android:contentDescription="@string/iv_express_delivery_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_delivery_option_express_price"
        app:layout_constraintVertical_bias="0.038"
        app:srcCompat="@drawable/express_delivery" />

    <Button
        android:id="@+id/b_cancel_delivery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_express_delivery" />

</androidx.constraintlayout.widget.ConstraintLayout>