<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Checkout.PaymentCardActivity">

    <TextView
        android:id="@+id/tv_card_payment_checkout_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_card_payment_checkout"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.528"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.045" />

    <EditText
        android:id="@+id/et_card_payment_card_number"
        android:layout_width="228dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/et_card_number_hint"
        android:inputType="number"
        android:textAlignment="center"
        android:maxLength="16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toEndOf="@+id/tv_card_payment_card_number_title"
        app:layout_constraintTop_toBottomOf="@+id/iv_card_payment_checkout"
        app:layout_constraintVertical_bias="0.035" />

    <EditText
        android:id="@+id/et_card_payment_expiry_month"
        android:layout_width="90dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/et_card_expiry_month"
        android:inputType="number"
        android:maxLength="2"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.063"
        app:layout_constraintStart_toEndOf="@+id/tv_card_payment_expiry_date_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_card_payment_expiry_date_month_title"
        app:layout_constraintVertical_bias="0.026" />

    <TextView
        android:id="@+id/tv_card_payment_expiry_date_year_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="26dp"
        android:text="@string/tv_card_expiry_year"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toEndOf="@+id/tv_card_payment_expiry_date_month_title"
        app:layout_constraintTop_toBottomOf="@+id/et_card_payment_card_number"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/et_card_payment_expiry_year"
        android:layout_width="84dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/et_card_expiry_year"
        android:inputType="number"
        android:maxLength="2"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.23"
        app:layout_constraintStart_toEndOf="@+id/tv_card_payment_expiry_date_month_year_separator_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_card_payment_expiry_date_year_title"
        app:layout_constraintVertical_bias="0.016" />

    <TextView
        android:id="@+id/tv_card_payment_expiry_date_month_year_separator_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_card_payment_expiry_date_month_year_separator_title"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.074"
        app:layout_constraintStart_toEndOf="@+id/et_card_payment_expiry_month"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.469" />

    <EditText
        android:id="@+id/et_card_payment_cvv"
        android:layout_width="179dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="Please enter CVV"
        android:inputType="number"
        android:maxLength="3"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toEndOf="@+id/tv_card_payment_cvv_title"
        app:layout_constraintTop_toBottomOf="@+id/et_card_payment_expiry_month"
        app:layout_constraintVertical_bias="0.096" />

    <TextView
        android:id="@+id/tv_card_payment_cvv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_card_payment_cvv_title"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.234"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_card_payment_expiry_date_title"
        app:layout_constraintVertical_bias="0.162" />

    <TextView
        android:id="@+id/tv_card_payment_expiry_date_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_card_payment_expiry_date_title"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.128"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_card_payment_card_number_title"
        app:layout_constraintVertical_bias="0.177" />

    <TextView
        android:id="@+id/tv_card_payment_expiry_date_month_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:text="@string/tv_card_expiry_month"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.418"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_card_payment_card_number"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_card_payment_card_number_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/tv_card_payment_card_number_title"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.332" />

    <Button
        android:id="@+id/b_confirm_card_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b_confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toEndOf="@+id/b_cancel_card_payment"
        app:layout_constraintTop_toBottomOf="@+id/tv_fraud_warning_card_payment"
        app:layout_constraintVertical_bias="0.4" />

    <Button
        android:id="@+id/b_cancel_card_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:text="@string/b_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.279"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_fraud_warning_card_payment"
        app:layout_constraintVertical_bias="0.029" />

    <ImageView
        android:id="@+id/iv_card_payment_checkout"
        android:layout_width="196dp"
        android:layout_height="119dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/iv_card_payment_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_card_payment_checkout_title"
        app:layout_constraintVertical_bias="0.003"
        app:srcCompat="@drawable/credit_card" />

    <ImageView
        android:id="@+id/iv_warning_sign_card_payment"
        android:layout_width="132dp"
        android:layout_height="97dp"
        android:layout_marginTop="35dp"
        android:contentDescription="@string/iv_warning_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_card_payment_cvv"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/warning_sign" />

    <TextView
        android:id="@+id/tv_fraud_warning_card_payment"
        android:layout_width="354dp"
        android:layout_height="36dp"
        android:text="@string/fraud_warning"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_warning_sign_card_payment"
        app:layout_constraintVertical_bias="0.162" />

</androidx.constraintlayout.widget.ConstraintLayout>