<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Checkout.PaymentMethodMenu">

    <TextView
        android:id="@+id/tv_payment_method_menu_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/tv_payment_method_menu_title"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.546"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.047" />

    <TextView
        android:id="@+id/tv_checkout_menu_desc"
        android:layout_width="305dp"
        android:layout_height="98dp"
        android:text="@string/checkout_menu_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_book_shopping_cart"
        app:layout_constraintVertical_bias="0.062" />

    <ImageView
        android:id="@+id/iv_book_shopping_cart"
        android:layout_width="124dp"
        android:layout_height="106dp"
        android:contentDescription="@string/iv_book_shopping_cart_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.124"
        app:srcCompat="@drawable/book_in_cart"
        tools:srcCompat="@drawable/book_in_cart" />

    <ImageView
        android:id="@+id/iv_card_payment"
        android:layout_width="140dp"
        android:layout_height="100dp"
        android:layout_marginStart="38dp"
        android:contentDescription="@string/iv_card_payment_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toEndOf="@+id/iv_cash_payment"
        app:layout_constraintTop_toBottomOf="@+id/tv_checkout_menu_desc"
        app:layout_constraintVertical_bias="0.096"
        app:srcCompat="@drawable/card_payment_book"
        tools:srcCompat="@drawable/card_payment_book" />

    <Button
        android:id="@+id/b_cash_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="3dp"
        android:text="@string/b_cash_payment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_cash_payment"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/iv_cash_payment"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/iv_cash_payment_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.225"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_checkout_menu_desc"
        app:layout_constraintVertical_bias="0.045"
        app:srcCompat="@drawable/cash_payment_book"
        tools:srcCompat="@drawable/cash_payment_book" />

    <Button
        android:id="@+id/b_card_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/b_card_payment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toEndOf="@+id/b_cash_payment"
        app:layout_constraintTop_toBottomOf="@+id/iv_card_payment"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/b_cancel_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/b_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_payment_fraud" />

    <TextView
        android:id="@+id/tv_payment_fraud"
        android:layout_width="367dp"
        android:layout_height="39dp"
        android:text="@string/fraud_warning"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_payment_warning"
        app:layout_constraintVertical_bias="0.111" />

    <ImageView
        android:id="@+id/iv_payment_warning"
        android:layout_width="113dp"
        android:layout_height="86dp"
        android:src="@drawable/warning_sign"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_card_payment"
        app:layout_constraintVertical_bias="0.123" />

</androidx.constraintlayout.widget.ConstraintLayout>